[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["DiscoLlife <discollife.itch.io>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
requests = "^2.27.1"
nltk = "^3.7"
wordnet = "^0.0.1-beta.2"
spacy = "^3.3.0"
torch = "^1.11.0"
discord-webhook = "^0.16.3"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"